fix: apply SDD spec to TaskController pagination endpoints
- Created WorkOrderSummary DTO and PagedWorkOrderResponse DTO to match api-spec.yaml.
- Refactored searchTasks and searchTasksAdvanced to return the proper paginated DTO structure instead of raw Map or raw Entity PagedResponse.
- Enforced RFC 7807 error responses for list endpoints.